--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -35,7 +35,7 @@
 .stepNode__Add {
     position: absolute;
     right: -22px;
-    top: 40%;
+    top: 35%;
 }
 
 .stepNode__Delete {
